# jacopo_api

./: .gitignore  README.md
api/: api.py  example_config.xml  example_config_2r.xml  example_config_2r_5t.xml  fb2_test.xml  listen_config.py  print_neighbors.py  real_world_interface.py
sim/: Dockerfile  run_sim.sh
sim/argos/: CMakeLists.txt
sim/argos/controllers/: CMakeLists.txt
sim/argos/controllers/config_lcm_handler/: CMakeLists.txt  config_lcm_handler.cpp  config_lcm_handler.h
sim/argos/controllers/footbot_central/: CMakeLists.txt
sim/argos/controllers/jacopo_api/: CMakeLists.txt  footbot_jacopo_api.cc  footbot_jacopo_api.h
sim/argos/controllers/navigation/: CMakeLists.txt
sim/argos/controllers/navigation/client/: nav_client.cpp  nav_client.h
sim/argos/controllers/navigation/lcm/: lcmhandler.cpp  lcmhandler.h
sim/argos/scripts/: launch_argos.sh  scene.xml
sim/argos/xml/: sim_argos_gui.xml
